--- a/app/layout.jade
+++ b/app/layout.jade
@@ -33,15 +33,15 @@ html.no-js
               li.nav-li
                 a(href="about.html" class="#{bodyClass=='about' ? 'active' : ''}") О доме
               li.nav-li
-                a(href="#") Расположение
+                a(href="location.html" class="#{bodyClass=='location' ? 'active' : ''}") Расположение
               li.nav-li
-                a(href="#") Планировки
+                a(href="layouts.html" class="#{bodyClass=='layouts' ? 'active' : ''}") Планировки
               li.nav-li
                 a(href="#") Ипотека
               li.nav-li
                 a(href="#") Застройщик
               li.nav-li
-                a(href="#") Новости
+                a(href="news.html" class="#{bodyClass=='news' ? 'active' : ''}") Новости
               li.nav-li
                 a(href="#") Контакты
 
