--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,3 +13,8 @@
 
 @import "pages/index";
 @import "pages/about";
+@import "pages/location";
+@import "pages/news";
+@import "pages/layouts";
+
+@import "system/media";
