--- a/app/styles/system/_classes.scss
+++ b/app/styles/system/_classes.scss
@@ -1,5 +1,6 @@
 $fs: 16;
 $default-ease: cubic-bezier(0.010, 0.995, 0.000, 0.995);
 $menu-height: 90px;
+$blue-hover: #34b8ce;
 
 .fl-r { float: right; }
