--- a/app/styles/system/_fonts.scss
+++ b/app/styles/system/_fonts.scss
@@ -43,3 +43,50 @@
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'krepostnoy';
+    src:url('fonts/krepostnoy.eot?-o216kc');
+    src:url('fonts/krepostnoy.eot?#iefix-o216kc') format('embedded-opentype'),
+        url('fonts/krepostnoy.woff?-o216kc') format('woff'),
+        url('fonts/krepostnoy.ttf?-o216kc') format('truetype'),
+        url('fonts/krepostnoy.svg?-o216kc#krepostnoy') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+i.icon {
+    font-family: 'krepostnoy';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-uniE600:before {
+    content: "\e600";
+}
+.icon-uniE601:before {
+    content: "\e601";
+}
+.icon-uniE602:before {
+    content: "\e602";
+}
+.icon-uniE603:before {
+    content: "\e603";
+}
+.icon-uniE604:before {
+    content: "\e604";
+}
+.icon-uniE605:before {
+    content: "\e605";
+}
+.icon-uniE606:before {
+    content: "\e606";
+}
