--- a/app/styles/system/_ui.scss
+++ b/app/styles/system/_ui.scss
@@ -28,3 +28,30 @@ a {
   font-weight: 300;
   margin: 25px 0;
 }
+
+.documents-ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  li {
+    font-size: 16px;
+    margin-bottom: 20px;
+    line-height: 1.6;
+
+    a {
+      color: #3db8cc;
+      border-bottom: 1px solid;
+      font-weight: 500;
+
+      &:hover {
+        color: #439ead;
+      }
+    }
+
+    span {
+      color: #aca599;
+      margin-left: .1em;
+    }
+  }
+}
