--- a/app/layouts.jade
+++ b/app/layouts.jade
@@ -29,35 +29,125 @@ block content
             ul.rooms
               li
                 .number 1
+                .info
+                  .info-cont
+                    .title Кухня-столовая
+                    .size
+                      span.amount 32
+                      span м<sup>2</sup>
               li
                 .number 2
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 3
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 4
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 5
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 6
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 7
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 8
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 9
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 10
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 11
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 12
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 13
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 14
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
               li
                 .number 15
-                
+                .info
+                  .info-cont
+                    .title
+                    .size
+                      span.amount
+                      span м<sup>2</sup> 
+
           .layout-info
             .title КВАРТИРА ДЛЯ БОЛЬШОЙ СЕМЬИ
             .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
