--- a/app/styles/pages/_layouts.scss
+++ b/app/styles/pages/_layouts.scss
@@ -96,15 +96,23 @@
 			
 			li {
 				position: absolute;
-				border-radius: 35px;
-				width: 35px;
-				height: 35px;
-				line-height: 35px;
-				color: #fff;
-				background: #3cbacb;
-				text-align: center;
-				font-size: 20px;
-				font-weight: 500;
+				cursor: default;
+
+				.number {
+					position: absolute;
+					left: 0;
+					top: 0;
+					display: inline-block;
+					border-radius: 35px;
+					width: 35px;
+					height: 35px;
+					line-height: 35px;
+					color: #fff;
+					background: #3cbacb;
+					text-align: center;
+					font-size: 20px;
+					font-weight: 500;
+				}
 
 				&:nth-of-type(1) {
 					top: 190px;
@@ -165,6 +173,56 @@
 				&:nth-of-type(15) {
 					top: 155px;
 					left: 470px;
+				}
+
+				.info {
+					position: absolute;
+					left: 0;
+					top: -100px;
+					width: 250px;
+					height: 78px;
+					margin-left: -107.5px;
+					text-align: center;
+
+					.info-cont {
+						display: inline-block;
+						vertical-align: top;
+						height: 100%;
+						background: #3cbacb;
+						color: #fff;
+						font-weight: 500;
+						padding: 0 15px;
+
+						.title {
+							font-size: 16px;
+							margin-top: 13px;
+						}
+
+						.size {
+							font-size: 20px;
+
+							.amount {
+								font-size: 30px;
+							}
+
+							sup {
+								font-size: 15px;
+							}
+						}
+					}
+
+					&:before {
+						content: "";
+						position: absolute;
+						top: 100%;
+						left: 50%;
+						margin-left: -10px;
+						width: 0;
+						height: 0;
+						border-style: solid;
+						border-width: 10px 10px 0 10px;
+						border-color: #3cbacb transparent transparent transparent;
+					}
 				}
 			}
 		}
