--- a/app/layouts.jade
+++ b/app/layouts.jade
@@ -39,113 +39,113 @@ block content
                 .number 2
                 .info
                   .info-cont
-                    .title
+                    .title Гостиная
                     .size
-                      span.amount
+                      span.amount 24,3
                       span м<sup>2</sup> 
               li
                 .number 3
                 .info
                   .info-cont
-                    .title
+                    .title Кабинет
                     .size
-                      span.amount
+                      span.amount 13
                       span м<sup>2</sup> 
               li
                 .number 4
                 .info
                   .info-cont
-                    .title
+                    .title Детская
                     .size
-                      span.amount
+                      span.amount 29,5
                       span м<sup>2</sup> 
               li
                 .number 5
                 .info
                   .info-cont
-                    .title
+                    .title Спальня № 1
                     .size
-                      span.amount
+                      span.amount 25,5
                       span м<sup>2</sup> 
               li
                 .number 6
                 .info
                   .info-cont
-                    .title
+                    .title Спальня № 2
                     .size
-                      span.amount
+                      span.amount 23,7
                       span м<sup>2</sup> 
               li
                 .number 7
                 .info
                   .info-cont
-                    .title
+                    .title Санузел
                     .size
-                      span.amount
+                      span.amount 13,2
                       span м<sup>2</sup> 
               li
                 .number 8
                 .info
                   .info-cont
-                    .title
+                    .title Гардеробная
                     .size
-                      span.amount
+                      span.amount 10
                       span м<sup>2</sup> 
               li
                 .number 9
                 .info
                   .info-cont
-                    .title
+                    .title Санузел
                     .size
-                      span.amount
+                      span.amount 5
                       span м<sup>2</sup> 
               li
                 .number 10
                 .info
                   .info-cont
-                    .title
+                    .title Холл
                     .size
-                      span.amount
+                      span.amount 25,5
                       span м<sup>2</sup> 
               li
                 .number 11
                 .info
                   .info-cont
-                    .title
+                    .title Вестибюль
                     .size
-                      span.amount
+                      span.amount 6,3
                       span м<sup>2</sup> 
               li
                 .number 12
                 .info
                   .info-cont
-                    .title
+                    .title Лифтовый холл
                     .size
-                      span.amount
+                      span.amount 4,9
                       span м<sup>2</sup> 
               li
                 .number 13
                 .info
                   .info-cont
-                    .title
+                    .title Балкон
                     .size
-                      span.amount
+                      span.amount 5,1
                       span м<sup>2</sup> 
               li
                 .number 14
                 .info
                   .info-cont
-                    .title
+                    .title Балкон
                     .size
-                      span.amount
+                      span.amount 3,5
                       span м<sup>2</sup> 
               li
                 .number 15
                 .info
                   .info-cont
-                    .title
+                    .title Гардероб (кладовая)
                     .size
-                      span.amount
+                      span.amount 5
                       span м<sup>2</sup> 
 
           .layout-info
@@ -157,6 +157,127 @@ block content
                 span PDF, 81 KB
         .js-tab.layout-about
           .layout-map.second-var
+            ul.rooms
+              li
+                .number 1
+                .info
+                  .info-cont
+                    .title Кухня-столовая
+                    .size
+                      span.amount 32
+                      span м<sup>2</sup>
+              li
+                .number 2
+                .info
+                  .info-cont
+                    .title Гостиная
+                    .size
+                      span.amount 24,3
+                      span м<sup>2</sup> 
+              li
+                .number 3
+                .info
+                  .info-cont
+                    .title Гардеробная
+                    .size
+                      span.amount 11,7
+                      span м<sup>2</sup> 
+              li
+                .number 4
+                .info
+                  .info-cont
+                    .title Спальня № 1
+                    .size
+                      span.amount 30,7
+                      span м<sup>2</sup> 
+              li
+                .number 5
+                .info
+                  .info-cont
+                    .title Детская
+                    .size
+                      span.amount 24
+                      span м<sup>2</sup> 
+              li
+                .number 6
+                .info
+                  .info-cont
+                    .title Спальня № 2
+                    .size
+                      span.amount 21,6
+                      span м<sup>2</sup> 
+              li
+                .number 7
+                .info
+                  .info-cont
+                    .title Санузел
+                    .size
+                      span.amount 11
+                      span м<sup>2</sup> 
+              li
+                .number 8
+                .info
+                  .info-cont
+                    .title Кабинет
+                    .size
+                      span.amount 10
+                      span м<sup>2</sup> 
+              li
+                .number 9
+                .info
+                  .info-cont
+                    .title Санузел
+                    .size
+                      span.amount 6–5
+                      span м<sup>2</sup> 
+              li
+                .number 10
+                .info
+                  .info-cont
+                    .title Холл
+                    .size
+                      span.amount 32,7
+                      span м<sup>2</sup> 
+              li
+                .number 11
+                .info
+                  .info-cont
+                    .title Вестибюль
+                    .size
+                      span.amount 6,3
+                      span м<sup>2</sup> 
+              li
+                .number 12
+                .info
+                  .info-cont
+                    .title Лифтовый холл
+                    .size
+                      span.amount 4,9
+                      span м<sup>2</sup> 
+              li
+                .number 13
+                .info
+                  .info-cont
+                    .title Балкон
+                    .size
+                      span.amount 5,1
+                      span м<sup>2</sup> 
+              li
+                .number 14
+                .info
+                  .info-cont
+                    .title Балкон
+                    .size
+                      span.amount 3,5
+                      span м<sup>2</sup> 
+              li
+                .number 15
+                .info
+                  .info-cont
+                    .title Кладовая
+                    .size
+                      span.amount 4
+                      span м<sup>2</sup> 
           .layout-info
             .title КВАРТИРА ДЛЯ ЭСТЕТОВ
             .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
