--- a/app/styles/pages/_layouts.scss
+++ b/app/styles/pages/_layouts.scss
@@ -176,6 +176,7 @@
 				}
 
 				.info {
+					display: none;
 					position: absolute;
 					left: 0;
 					top: -100px;
@@ -183,6 +184,7 @@
 					height: 78px;
 					margin-left: -107.5px;
 					text-align: center;
+					z-index: 3;
 
 					.info-cont {
 						display: inline-block;
@@ -222,6 +224,12 @@
 						border-style: solid;
 						border-width: 10px 10px 0 10px;
 						border-color: #3cbacb transparent transparent transparent;
+					}
+				}
+
+				&:hover {
+					.info {
+						display: block;
 					}
 				}
 			}
