--- a/app/about.jade
+++ b/app/about.jade
@@ -62,7 +62,7 @@ block content
         .block-text.
           Жилой дом Крепостной 100<br>
           включает в себя:
-          <ul>
+          <ul class="us-list">
             <li>подземную парковку для жильцов;
             <li>внутреннюю охраняемую территорию с гостевой парковкой;
             <li>детскую площадку;
@@ -130,20 +130,24 @@ block content
         .us-title Документация
         ul.documents-ul
           li
-            a(href="#") Разрешение на строиcтельство.
+            a(href="uploads/docs_1.jpg") Разрешение на строиcтельство.
             span JPG, 659 KB
           li
-            a(href="#") Свидетельство права на землю.
+            a(href="uploads/docs_2.jpg") Свидетельство о праве на земельный участок.
             span JPG, 659 KB
           li
-            a(href="#") Проектная декларация.
+            a(href="uploads/docs_3.pdf") Проектная декларация.
             span PDF, 115 КВ
           li
-            a(href="#") Договор долевого участия (образец).
+            a(href="uploads/docs_4.pdf") Договор долевого участия (образец).
             span PDF, 110 KB
           li
-            a(href="#") Свидетельство о государственной регистрации юридического лица.
+            a(href="uploads/docs_5.jpg") Свидетельство о государственной регистрации юридического лица.
             span JPG, 81 KB
+          li
+            a(href="uploads/docs_6.pdf") Аудиторское заключение.
+            span JPG, 81 KB
+
       .grid_2
         .building-block
           ul.floors
