--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,5 +16,8 @@
 @import "pages/location";
 @import "pages/news";
 @import "pages/layouts";
+@import "pages/mortgage";
+@import "pages/company";
+@import "pages/contacts";
 
 @import "system/media";
