--- a/app/styles/includes/_header.scss
+++ b/app/styles/includes/_header.scss
@@ -56,6 +56,10 @@
 						background: #fff;
 						transform: translateY(0);
 					}
+
+					&.active {
+						cursor: default;
+					}
 				}
 			}
 		}
