--- a/app/about.jade
+++ b/app/about.jade
@@ -14,10 +14,10 @@ block content
           Архитектура здания выполнена в стиле «фьюжн» и сочетает в себе классические мотивы исторического центра Ростова-на-Дону с современным элегантным дизайном. В основу концепции положено совмещение различных высококачественных материалов, таких как кирпич ручной формовки и система вентилируемого фасада.
       .grid_3.us-slider.js-slider-cont
         .slider-controls.js-controls
-          a.c-arrow.c-left <
+          //- a.c-arrow.c-left <i class="icon icon-arrow-left"></i>
           div.numbers-cont
             ul.numbers
-          a.c-arrow.c-right >
+          //- a.c-arrow.c-right <i class="icon icon-arrow-right"></i>
         .js-us-slider
           each i in [1,2,3,4,5,6,7,8,9,10,11,12]
             img(alt="" src="images/sliders/facades/#{i}.jpg")
@@ -71,10 +71,10 @@ block content
           </ul>
       .grid_3.us-slider.js-slider-cont
         .slider-controls.js-controls
-          a.c-arrow.c-left <
+          //- a.c-arrow.c-left <i class="icon icon-arrow-left"></i>
           div.numbers-cont
             ul.numbers
-          a.c-arrow.c-right >
+          //- a.c-arrow.c-right <i class="icon icon-arrow-right"></i>
         .js-us-slider
           each i in [1,2,3,4,5,6]
             img(alt="" src="images/sliders/structure/#{i}.jpg")
@@ -115,10 +115,10 @@ block content
           <p>В здании используется лифт класса люкс испанской фирмы IMEM c отделкой деревом, а так же высококлассная централизованная система очистки воды и система видеонаблюдения.</p>
       .grid_3.us-slider.js-slider-cont
         .slider-controls.js-controls
-          a.c-arrow.c-left <
+          //- a.c-arrow.c-left <i class="icon icon-arrow-left"></i>
           div.numbers-cont
             ul.numbers
-          a.c-arrow.c-right >
+          //- a.c-arrow.c-right <i class="icon icon-arrow-right"></i>
         .js-us-slider
           each i in [1,2,3,4,5,6,7,8]
             img(alt="" src="images/sliders/hall/#{i}.jpg")
@@ -173,10 +173,10 @@ block content
         span
       .us-slider.js-slider-cont.ajax-fotorama
         .slider-controls.js-controls
-          a.c-arrow.c-left <
+          //- a.c-arrow.c-left <i class="icon icon-arrow-left"></i>
           div.numbers-cont
             ul.numbers
-          a.c-arrow.c-right >
+          //- a.c-arrow.c-right <i class="icon icon-arrow-right"></i>
         div(data-height="100%" data-fit="contain" data-maxheight="100%").js-us-slider
 
           
