--- a/app/index.jade
+++ b/app/index.jade
@@ -16,10 +16,10 @@ block content
         .subs
           .subs-cont
             .sub-text
-              a(href="#").date 24.10.2015
+              span.date 24.10.2015
               br
               a(href="#").text Запуск первой очереди строительства.
             .sub-text
-              a(href="#").down-link Правовая документация
+              a(href="#").icon-link <i class="icon icon-file"></i> Правовая документация
       
   
