--- a/app/styles/system/_fonts.scss
+++ b/app/styles/system/_fonts.scss
@@ -69,24 +69,15 @@ i.icon {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-uniE600:before {
+.icon-file:before {
     content: "\e600";
 }
-.icon-uniE601:before {
+.icon-arrow-right:before {
     content: "\e601";
 }
-.icon-uniE602:before {
+.icon-arrow-left:before {
     content: "\e602";
 }
-.icon-uniE603:before {
-    content: "\e603";
-}
-.icon-uniE604:before {
-    content: "\e604";
-}
-.icon-uniE605:before {
-    content: "\e605";
-}
-.icon-uniE606:before {
-    content: "\e606";
-}
+
+
+
