--- a/app/styles/system/_ui.scss
+++ b/app/styles/system/_ui.scss
@@ -43,6 +43,17 @@ p {
   }
 }
 
+.icon-link {
+  .icon {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    top: -.1em;
+    margin-right: 10px;
+    font-size: 35px;
+  }
+}
+
 .us-title {
   font-size: 40px;
   color: rgb(94, 83, 62);
