--- a/app/about.jade
+++ b/app/about.jade
@@ -91,7 +91,7 @@ block content
           .desc Готовность - <span class="js-ePerc"></span>%
         .episodes-slider
           .top-desc
-            span Начало строиcтельства - сентябрь 2014
+            span Начало строительства - сентябрь 2014
             span.fl-r Окончание строительства - март 2016 года
           ul.photos.js-ePhotos
             //- each i in [1,2,3,4,5,6,7]
@@ -109,7 +109,7 @@ block content
   .slider-block
     .container
       .grid_1
-        .us-title Инфраструк-<br>тура дома
+        .us-title Холл
         .block-text.
           <p>На первом этаже располагается общий холл, оборудованный охранным постом. Все общественные зоны выполняются с применением высококачественных отделочных материалов.</p>
           <p>В здании используется лифт класса люкс испанской фирмы IMEM c отделкой деревом, а так же высококлассная централизованная система очистки воды и система видеонаблюдения.</p>
