--- a/app/layout.jade
+++ b/app/layout.jade
@@ -1,4 +1,4 @@
-- var title = "Крепостной"
+- var title = "Клубный дом «Крепостной 100»"
 - var headerClass = "";
 - var bodyClass = "";
 
@@ -9,7 +9,7 @@ html.no-js
     head
         meta(charset="utf-8")
         title #{title}
-        meta(name="description" content="")
+        meta(name="description" content="Современный комфортабельный жилой дом в центре Ростова")
         meta(name="viewport" content="width=device-width")
         link(rel="shortcut icon" href="/favicon.ico")
         // build:css(.) styles/vendor.css
@@ -41,7 +41,7 @@ html.no-js
               li.nav-li
                 a(href="company.html" class="#{bodyClass=='company' ? 'active' : ''}") Застройщик
               li.nav-li
-                a(href="news.html" class="#{bodyClass=='news' ? 'active' : ''}") Новости
+                a(href="about.html#documents" class="#{bodyClass=='news' ? 'active' : ''}") Документы
               li.nav-li
                 a(href="contacts.html" class="#{bodyClass=='contacts' ? 'active' : ''}") Контакты
 
@@ -49,9 +49,9 @@ html.no-js
 
       footer.footer
         .wrapper
-          span © Группа компаний «Стройковъ», 2014
-          a(href="#").brd-link Правовые документы
-          span.fl-r Разработано агентством <a href="#" class="brd-link">ГРАФЕМА</a>
+          span © ООО «Наш город», 2014
+          a(href="news.html").brd-link Новости
+          span.fl-r Сделано в <a href="#" class="brd-link">ГРАФЕМА</a>
 
       // build:js(.) scripts/vendor.js
       // bower:js
