--- a/app/layout.jade
+++ b/app/layout.jade
@@ -41,6 +41,8 @@ html.no-js
               li.nav-li
                 a(href="company.html" class="#{bodyClass=='company' ? 'active' : ''}") Застройщик
               li.nav-li
+                a(href="news.html" class="#{bodyClass=='news' ? 'active' : ''}") Новости
+              li.nav-li
                 a(href="about.html#documents" class="#{bodyClass=='news' ? 'active' : ''}") Документы
               li.nav-li
                 a(href="contacts.html" class="#{bodyClass=='contacts' ? 'active' : ''}") Контакты
@@ -50,7 +52,7 @@ html.no-js
       footer.footer
         .wrapper
           span © ООО «Наш город», 2014
-          a(href="news.html").brd-link Новости
+          a(href="about.html#documents").brd-link Документы
           span.fl-r Сделано в <a href="#" class="brd-link">ГРАФЕМА</a>
 
       // build:js(.) scripts/vendor.js
